--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -13,6 +13,7 @@ body {
     --title-font-size: 30px;
     --desc-font-size: 19px;
     --link-color: #00276e;
+    --link-font-size: 35px;
     --line-color: #000;
     --content-width: 90%;
     --header-height: 6vh;
