add tags, description, publish option

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -12,7 +12,7 @@ body {
     --title-color: #000;
     --title-font-size: 30px;
     --desc-font-size: 19px;
-    --link-color: #00276e;
+    --link-color: #0041b9;
     --link-font-size: 32px;
     --line-color: #000;
     --content-width: 90%;
@@ -20,7 +20,7 @@ body {
     --line-height: 1.1em;
     --space: 45px;
     --space-large: 80px;
-    --post-spacer: 30px;
+    --post-spacer: 20px;
 }
 
 // LG
@@ -64,7 +64,7 @@ body {
         --header-height: 4vh;
         --space: 30px;
         --space-large: 40px;
-        --post-spacer: 20px;
+        --post-spacer: 10px;
     }
 }
 
