small layout tweaks

--- a/src/assets/style/_typo.scss
+++ b/src/assets/style/_typo.scss
@@ -42,6 +42,7 @@ a {
     text-decoration: none;
     font-family: "Cirka-Light";
     font-size: var(--link-font-size);
+    margin: 0;
 
     &:hover {
         color: var(--link-color);
