--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -18,10 +18,10 @@ body {
     --content-width: 90%;
     --header-height: 55px;
     --line-height: 1.15em;
-    --paragraph-height: 30px;
+    --paragraph-height: 28px;
     --space: 45px;
     --space-large: 80px;
-    --post-spacer: 30px;
+    --post-spacer: 25px;
 }
 
 // LG
@@ -92,5 +92,5 @@ body[data-theme="dark"] {
     --border-color: rgba(255, 255, 255, 0.1);
     --body-color: #ced8de;
     --title-color: #fff;
-    --link-color: #af9cef;
+    --link-color: #ffbe46;
 }
