--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -11,6 +11,9 @@ html {
 
 body {
     padding: 0 var(--space-large);
+    background-color: var(--bg-color);
+    color: var(--body-color);
+    transition: color 0.6s, background-color 0.6s, transform 0.6s;
 }
 
 hr {
