--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -12,7 +12,8 @@ body {
     --title-color: #000;
     --title-font-size: 30px;
     --desc-font-size: 19px;
-    --link-color: #0041b9;
+    // --link-color: #0041b9;
+    --link-color: #f1a922;
     --link-font-size: 32px;
     --line-color: #000;
     --content-width: 90%;
@@ -92,5 +93,5 @@ body[data-theme="dark"] {
     --border-color: rgba(255, 255, 255, 0.1);
     --body-color: #ced8de;
     --title-color: #fff;
-    --link-color: #ffbe46;
+    --link-color: #1553c5;
 }
