--- a/src/assets/style/_code.scss
+++ b/src/assets/style/_code.scss
@@ -7,68 +7,64 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
  */
 
 pre {
-    padding: calc(var(--space) / 2);
-    font-size: 0.85em;
-    margin-bottom: 2em;
+	padding: calc(var(--post-spacer) / 2);
 }
 
 code {
-    border: 1px solid var(--border-color);
-    font-size: 0.85em;
-    padding: 0.2em 0.5em;
+	padding: 0.1em 0.2em;
 }
 
 code[class*="language-"],
 pre[class*="language-"] {
-    font-family: SF Mono, Consolas, Monaco, "Andale Mono", "Ubuntu Mono",
-        monospace;
-    text-align: left;
-    white-space: pre;
-    word-spacing: normal;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 1.5;
+	font-family: "SF Mono", Consolas, Monaco, "Andale Mono", "Ubuntu Mono",
+		monospace;
+	text-align: left;
+	white-space: pre;
+	word-spacing: normal;
+	word-break: normal;
+	word-wrap: normal;
+	line-height: 1.5;
 
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
 
-    -webkit-hyphens: none;
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
 }
 
 @media print {
-    code[class*="language-"],
-    pre[class*="language-"] {
-        text-shadow: none;
-    }
+	code[class*="language-"],
+	pre[class*="language-"] {
+		text-shadow: none;
+	}
 }
 
 /* Code blocks */
 pre[class*="language-"] {
-    overflow: auto;
+	overflow: auto;
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-    white-space: normal;
+	white-space: normal;
 }
 
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-    color: slategray;
+	color: slategray;
 }
 
 .token.punctuation {
-    color: #999;
+	color: #999;
 }
 
 .namespace {
-    opacity: 0.7;
+	opacity: 0.7;
 }
 
 .token.property,
@@ -78,7 +74,7 @@ pre[class*="language-"] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-    color: #c71b7b;
+	color: #c71b7b;
 }
 
 .token.selector,
@@ -87,7 +83,7 @@ pre[class*="language-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-    color: #690;
+	color: #690;
 }
 
 .token.operator,
@@ -95,34 +91,34 @@ pre[class*="language-"] {
 .token.url,
 .language-css .token.string,
 .style .token.string {
-    color: #9a6e3a;
+	color: #9a6e3a;
 }
 
 .token.atrule,
 .token.attr-value,
 .token.keyword {
-    color: #20a7e0;
+	color: #20a7e0;
 }
 
 .token.function,
 .token.class-name {
-    color: #dd4a68;
+	color: #dd4a68;
 }
 
 .token.regex,
 .token.important,
 .token.variable {
-    color: #e90;
+	color: #e90;
 }
 
 .token.important,
 .token.bold {
-    font-weight: bold;
+	font-weight: bold;
 }
 .token.italic {
-    font-style: italic;
+	font-style: italic;
 }
 
 .token.entity {
-    cursor: help;
+	cursor: help;
 }
