--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -17,7 +17,7 @@ body {
 	--bg-code: #fff;
 	--body-color: #000;
 	--title-color: #000;
-	--progress-bar-color: #000;
+	--progress-bar-color: #00ff00;
 	--progress-bar-height: 15px;
 	--title-font-size: 40px;
 	--desc-font-size: 33px;
@@ -26,10 +26,14 @@ body {
 	--line-color: #000;
 	--header-width: 91vw;
 	--header-height: 55px;
+	--nav-margin-right: 0;
+	--toggle-icon-width: 24px;
+	--toggle-icon-height: 24px;
 	--post-card-width: 9em;
 	--post-card-height: 20em;
 	--post-card-margin: 1em 2em 0 0;
 	--post-card-padding: 2em 1.5em 0 1.5em;
+	--post-card-tags-padding: 1em 0;
 	--header-height: 55px;
 	--line-height: 1.15em;
 	--paragraph-height: 28px;
@@ -37,7 +41,7 @@ body {
 	--post-margin: 5.5em 0;
 	--post-padding: 0 11em;
 	--post-description-padding: 0 1em 1em 1em;
-	--post-content-padding: 2em;
+	--post-content-padding: 2em 2em 2.5em 2em;
 	--space: 45px;
 	--space-large: 80px;
 }
@@ -59,7 +63,7 @@ body {
 		--post-margin: 5.5em 0;
 		--post-padding: 0 10em;
 		--post-description-padding: 0 0.5em 0.5em 0.5em;
-		--post-content-padding: 1.75em;
+		--post-content-padding: 2em 2em 2.5em 2em;
 		--paragraph-height: 28px;
 		--paragraph-line-height: 28px;
 		--space: 30px;
@@ -74,19 +78,19 @@ body {
 	}
 	body {
 		--title-font-size: 18px;
-		--desc-font-size: 14px;
+		--desc-font-size: 18px;
 		--link-font-size: 18px;
 		--header-height: 5vh;
 		--post-card-width: 9em;
-		--post-card-height: 15em;
+		--post-card-height: 16em;
 		--post-card-margin: 1em 2em 0 0;
-		--post-card-padding: 2em 1.5em 0 1.5em;
+		--post-card-tags-padding: 0 0 1em 0;
 		--post-margin: 5.5em 0;
 		--post-padding: 0 6em;
 		--post-description-padding: 0 0.5em 0.5em 0.5em;
-		--paragraph-height: 28px;
+		--post-content-padding: 2em;
 		--paragraph-line-height: 22px;
-		--space: 30px;
+		--space: 1.25em;
 		--space-large: 40px;
 	}
 }
@@ -109,7 +113,7 @@ body {
 		--post-description-padding: 0 0.5em 0.5em 0.5em;
 		--paragraph-height: 28px;
 		--paragraph-line-height: 22px;
-		--space: 30px;
+		--space: 1em;
 		--space-large: 40px;
 	}
 }
@@ -123,19 +127,22 @@ body {
 		--title-font-size: 20px;
 		--desc-font-size: 19px;
 		--link-font-size: 18px;
-		--header-width: 80vw;
-		--header-height: 4vh;
+		--header-width: 90vw;
+		--header-height: 1vh;
+		--nav-margin-right: 2em;
 		--post-card-width: 10em;
 		--post-card-height: 20em;
 		--post-card-margin: 1em 0;
 		--post-card-padding: 2em 1.5em 0 1.5em;
+		--post-card-tags-padding: 2em 0;
 		--post-margin: 5.5em 0;
 		--post-padding: 0 0;
 		--post-content-padding: 1.5em;
 		--post-description-padding: 0 0 1em 0;
+		--post-content-padding: 1.5em 2em 2.5em 2em;
 		--paragraph-height: 15px;
 		--paragraph-line-height: 20px;
-		--space: 30px;
+		--space: 1.75em;
 		--space-large: 40px;
 		--progress-bar-height: 5px;
 	}
