--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -1,5 +1,5 @@
 // Breakpoints (width)
-$xlarge: 1200px;
+$xlarge: 1400px;
 $large: 1024px;
 $medium: 768px;
 $small: 650px;
@@ -62,9 +62,9 @@ body {
 		--post-card-margin: 1em 2em 0 0;
 		--post-card-padding: 2em 1.5em 0 1.5em;
 		--post-margin: 5.5em 0;
-		--post-padding: 0 10em;
+		--post-padding: 0 15vw;
 		--post-description-padding: 0 0.5em 0.5em 0.5em;
-		--post-content-padding: 2em 2em 2.5em 2em;
+		--post-content-padding: 1em 2em 2.5em 2em;
 		--paragraph-height: 28px;
 		--paragraph-line-height: 28px;
 		--space: 30px;
@@ -140,7 +140,7 @@ body {
 		--post-margin: 5.5em 0;
 		--post-padding: 0 0;
 		--post-description-padding: 0 0 1em 0;
-		--post-content-padding: 1em 1.75em 2.5em 1.75em;
+		--post-content-padding: 1.75em 1.75em 2.5em 1.75em;
 		--paragraph-height: 15px;
 		--paragraph-line-height: 19px;
 		--space: 1.75em;
