--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -24,6 +24,16 @@ hr {
 	border-top: 1px solid var(--line-color);
 }
 
+ol {
+	display: block;
+	list-style-type: decimal;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	margin-left: 0;
+	margin-right: 0;
+	padding-left: 40px;
+}
+
 a {
 	border-bottom: 1px solid var(--body-color);
 	&:hover {
